--- a/week72/explanatory_materials/frosty_friday_72_explanatory.html
+++ b/week72/explanatory_materials/frosty_friday_72_explanatory.html
@@ -263,12 +263,12 @@
                         応用①：Git連携で開発を楽に
                     </h3>
                     <!-- Text: text-lg (維持) -->
-                    <p class="text-lg text-slate-600 mb-4 font-semibold">普段の SQL を Git で管理して、そのまま Snowflake で実行！</p>
+                    <p class="text-lg text-slate-600 mb-4 font-semibold">普段 Git で管理しているSQLを、そのまま Snowflake で実行！</p>
                     <!-- List: text-lg (維持) -->
                     <ul class="space-y-3 text-lg text-slate-700 list-inside list-disc mb-8">
-                        <li><strong>バージョン管理に強い</strong>：実行した SQL のバージョンを正確に把握できます。</li>
-                        <li><strong>チーム開発にぴったり</strong>：みんなで同じソースコードを使うから安心。</li>
-                        <li><strong>自動化</strong>：Git と連携してクエリ実行を半自動化しちゃいます。</li>
+                        <li><strong>バージョン管理に強い</strong>：<br>実行した SQL のバージョンを正確に把握できます。</li>
+                        <li><strong>チーム開発にぴったり</strong>：<br>みんなで同じソースコードを使うから安心。</li>
+                        <li><strong>自動化</strong>：<br>Gitと連携してクエリ実行を半自動化しちゃいます。</li>
                     </ul>
 
                     <!-- Tabs for Git -->
@@ -311,9 +311,9 @@ EXECUTE IMMEDIATE FROM @my_git_stage/path/to/script.sql
                     <p class="text-lg text-slate-600 mb-6 font-semibold">同じ SQL を開発環境・本番環境で手間なく再利用！</p>
                     <!-- List: text-lg (維持) -->
                     <ul class="space-y-3 text-lg text-slate-700 list-inside list-disc mb-8">
-                        <li><strong>環境依存を解消</strong>：変数を変えるだけで DB やスキーマの切替が即座に完了。</li>
-                        <li><strong>再現性がアップ</strong>：環境ごとの設定ミスを防ぎ、安定した実行を実現。</li>
-                        <li><strong>テンプレートの威力</strong>：一つのソースを様々なシナリオで活用可能に。</li>
+                        <li><strong>環境依存を解消</strong>：<br>変数を変えるだけで DB やスキーマの切替が即座に完了。</li>
+                        <li><strong>再現性がアップ</strong>：<br>環境ごとの設定ミスを防ぎ、安定した実行を実現。</li>
+                        <li><strong>テンプレートの威力</strong>：<br>一つのソースを様々なシナリオで活用可能に。</li>
                     </ul>
 
                     <!-- Tabs for Jinja -->
@@ -354,18 +354,18 @@ EXECUTE IMMEDIATE FROM @stage/update_user.sql
             <!-- まとめセクションの幅を max-w-5xl に統一 (他のセクションと揃えるため) -->
             <div class="max-w-5xl mx-auto bg-snowflake-light p-8 md:p-12 rounded-2xl shadow-xl">
                  <!-- H2: セクションタイトル (維持) -->
-                 <h2 class="text-4xl font-extrabold text-center mb-8">今日のハイライト！</h2>
+                 <h2 class="text-4xl font-extrabold text-center mb-8">まとめ</h2>
                  <!-- List: text-lg (維持) -->
                  <ul class="space-y-4 text-lg text-slate-700">
                     <li class="flex items-start"><span class="bg-snowflake-blue text-white rounded-full w-8 h-8 flex items-center justify-center font-bold text-base mr-4 mt-1">🥳</span><div><strong>SQLをファイルとして実行できる</strong>：<br>ステージやGitから直接、SQL処理を呼び出せるように。</div></li>
                     <li class="flex items-start"><span class="bg-snowflake-blue text-white rounded-full w-8 h-8 flex items-center justify-center font-bold text-base mr-4 mt-1">🤝</span><div><strong>Gitとあわせてチーム開発が楽になる</strong>：<br>バージョン管理と自動化がぐっと身近に。</div></li>
-                    <li class="flex items-start"><span class="bg-snowflake-blue text-white rounded-full w-8 h-8 flex items-center justify-center font-bold text-base mr-4 mt-1">🔄</span><div><strong>テンプレで環境をまたいで再利用できる</strong>：Jinja2で環境切替も簡単。</div></li>
+                    <li class="flex items-start"><span class="bg-snowflake-blue text-white rounded-full w-8 h-8 flex items-center justify-center font-bold text-base mr-4 mt-1">🔄</span><div><strong>テンプレで環境をまたいで再利用できる</strong>：<br>Jinja2で環境切替も簡単。</div></li>
                  </ul>
                  <div class="border-t border-slate-300 my-8"></div>
                  <blockquote class="text-center">
                      <!-- キーメッセージ: text-4xl md:text-5xl (維持) -->
                      <p class="text-4xl md:text-5xl font-extrabold text-slate-800 leading-tight">
-                         👉 SQLをコードとして、<br>もっと<span class="snowflake-blue">自由に！</span><span class="text-5xl ml-2">🎉</span>
+                         SQLをコードとして、もっと<span class="snowflake-blue">自由に！</span><span class="text-5xl ml-2">🎉</span>
                      </p>
                  </blockquote>
             </div>
