--- a/week72/explanatory_materials/frosty_friday_72_explanatory.html
+++ b/week72/explanatory_materials/frosty_friday_72_explanatory.html
@@ -227,7 +227,7 @@
                 <!-- H2: セクションタイトル (維持) -->
                 <h2 class="text-4xl font-extrabold">応用編</h2>
                 <!-- Text: text-lg (維持) -->
-                <p class="mt-3 text-lg text-slate-600">この機能は、開発から運用まで、同じ手順でサクッと回せます。応用例を見てみましょう。</p>
+                <p class="mt-3 text-lg text-slate-600">開発から運用まで、同じ手順でサクッと回せる便利な方法を見ていきましょう！</p>
             </div>
             <!-- 応用編サマリーの幅を max-w-6xl に拡大し、中央寄せ -->
             <div class="grid lg:grid-cols-2 gap-8 max-w-6xl mx-auto">
